Refactor AbstractS3Service to replace deprecated URL usage with URI; improve error handling